# Anubis

./: .gitignore  CONTRIBUTING.md  Pipfile  README.md  __init__.py  anubis.cfg.example  database.py  leveling.py  log.db  pyproject.toml  schema.sql
anubis/: __init__.py  __main__.py  customizations.py  database.py  leveling.py  models.py  old_database.py
anubis/cogs/: __init__.py  admin_commands.py  leveling.py  rewards.py  settings.py  user_commands.py
anubis/migrations/: 001.sql  002.sql
